--- a/template/layout-front.phtml
+++ b/template/layout-front.phtml
@@ -120,7 +120,9 @@ $blockTemplate = $this->template('block');
                     <div class="brick1 logo_myContainer">
                         <a href="https://www.pejmannorouzi.com" class="myNav-item clearfix">
                             <div class="myNav-hover"></div>
-                            <h1 class="logo">پژمان</h1>
+                            <h1 class="logo">
+                                <img src="<?php echo $this->assetTheme('image/logo.png'); ?>"  alt="پژمان نوروزی" class="img-circle">
+                            </h1>
                         </a>
                     </div>
                     <div class="brick1 transparent"></div>
@@ -225,7 +227,7 @@ $blockTemplate = $this->template('block');
                 <div class="brick1 logo_myContainer">
                     <a href="https://www.pejmannorouzi.com" class="myNav-item clearfix">
                         <div class="myNav-hover"></div>
-                        <h1 class="logo">پژمان</h1>
+                        <img src="<?php echo $this->assetTheme('image/logo.png'); ?>"  alt="پژمان نوروزی" class="img-circle">
                     </a>
                 </div>
                 <div class="brick1 odd">
@@ -341,9 +343,10 @@ $blockTemplate = $this->template('block');
     <div id="portfolio" class="section">
         <div class="myContainer">
             <div class="hero">
-                <h1 class="hero-color">نمونه کارها</h1>
-                <p class="hero-color">اینجا به بخشی از فعالیتهای حرفه ای من که با کمک دوستانم پیش برده ایم سرک
-                    بکشید.</p>
+                <h1 class="hero-color">
+                    <a class="btn btn-large" title="نمونه کارها" href="https://www.pejmannorouzi.com/news/portfolio">نمونه کارها</a>
+                </h1>
+                <p class="hero-color">پروژه های من را در اینجا می بینید. برای مشاهده باقی نمونه کارها، روی دکمه نمونه کار کلید کنید.</p>
             </div>
             <ul class="filter clearfix">
                 <li><a href="#" class="active" data-filter="*">همه</a></li>
@@ -465,7 +468,7 @@ $blockTemplate = $this->template('block');
                 <div class="col-md-6 col-xs-12">
                     <div class="team">
                         <div class="ava">
-                            <img src="https://www.pejmannorouzi.com/upload/argo/p1.jpg" alt="منِ معلم">
+                            <img src="https://www.pejmannorouzi.com/upload/argo/p6.jpg" alt="منِ معلم">
                         </div>
                         <div class="info">
                             <h4 class="name">منِ معلم</h4>
@@ -525,7 +528,7 @@ $blockTemplate = $this->template('block');
                 <div class="col-md-6 col-xs-12">
                     <div class="team">
                         <div class="ava">
-                            <img src="https://www.pejmannorouzi.com/upload/argo/p4.jpg" alt="منِ‌ مروج">
+                            <img src="https://www.pejmannorouzi.com/upload/argo/p5.jpg" alt="منِ‌ مروج">
                         </div>
                         <div class="info">
                             <h4 class="name">منِ‌ مروج</h4>
@@ -550,9 +553,10 @@ $blockTemplate = $this->template('block');
     <div id="blog" class="section">
         <div class="myContainer">
             <div class="hero">
-                <h1 class="hero-color">وبلاگ</h1>
-                <p class="hero-color">اینجا مجموعه‌ای از نوشته‌های جدید و آرشیوی از نوشته‌های قبلی‌ام را که در نشریات
-                    مختلف منتشر شده‌اند خواهید یافت.</p>
+                <h1 class="hero-color">
+                    <a class="btn btn-large" title="وبلاگ" href="https://www.pejmannorouzi.com/news/blog">وبلاگ</a>
+                </h1>
+                <p class="hero-color">آخرین نوشته های من را این پایین می بینید. برای خواندن باقی نوشته ها، روی دکمه وبلاگ کلیک کنید.</p>
             </div>
             <ul class="filter clearfix">
                 <li><a href="#" class="active" data-filter="*">همه</a></li>
@@ -562,6 +566,7 @@ $blockTemplate = $this->template('block');
                 <li><a href="#" data-filter=".topic-13">ادبیات</a></li>
                 <li><a href="#" data-filter=".topic-9">سفرنامه</a></li>
                 <li><a href="#" data-filter=".topic-16">گزارش</a></li>
+                <li><a href="#" data-filter=".topic-19">محیط‌زیست</a></li>
                 <li><a href="#" data-filter=".topic-15">متفرقه</a></li>
             </ul>
             <?php echo $this->widget('news-blog'); ?>
@@ -591,7 +596,6 @@ $blockTemplate = $this->template('block');
                         <li><a target="_blank" href="https://t.me/pejmandiaries">کانال تلگرامی ام</a></li>
                         <li><a target="_blank" href="https://www.instagram.com/pj.norouzi">اینستاگرام شخصی ام</a></li>
                         <li><a target="_blank" href="http://www.projectraz.com">لینک وبسایت پروژه راز</a></li>
-                        <li>ایمیل : me@pejmannorouzi.com</li>
                     </ul>
                     <div class="social">
                         <a href="https://www.instagram.com/pj.norouzi" class="gplus"><i class="fa fa-instagram"></i></a>
@@ -612,8 +616,8 @@ $blockTemplate = $this->template('block');
                         </div>
                         <div class="row-fluid">
                             <div class="col-md-4">
-                                <button name="frm_submit" class="btn " type="submit"><i class="fa fa-paper-plane-o"></i>ارسال
-                                    پیام
+                                <button name="frm_submit" class="btn " type="submit">
+                                    <i class="fa fa-paper-plane-o"></i>ارسال پیام
                                 </button>
                             </div>
                             <div class="col-md-8">
@@ -643,23 +647,28 @@ $blockTemplate = $this->template('block');
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav pull-right">
                     <li class="">
-                        <a href="https://www.pejmannorouzi.com#about-us"><i class="fa fa-comment-o"></i>درباره من</a>
+                        <a href="https://www.pejmannorouzi.com#about-us">
+                            <i class="fa fa-comment-o"></i>درباره من</a>
                     </li>
                     <li class="">
-                        <a href="https://www.pejmannorouzi.com#blog"><i class="fa fa-newspaper-o"></i>وبلاگ</a>
+                        <a href="https://www.pejmannorouzi.com#blog">
+                            <i class="fa fa-newspaper-o"></i>وبلاگ</a>
                     </li>
                     <li class="">
-                        <a href="https://www.pejmannorouzi.com#portfolio"><i class="fa fa-picture-o"></i>نمونه کارها</a>
+                        <a href="https://www.pejmannorouzi.com#portfolio"
+                        ><i class="fa fa-picture-o"></i>نمونه کارها</a>
                     </li>
                     <li class="">
-                        <a href="https://www.pejmannorouzi.com#services"><i class="fa fa-lightbulb-o"></i>خدمات</a>
+                        <a href="https://www.pejmannorouzi.com#services">
+                            <i class="fa fa-lightbulb-o"></i>خدمات</a>
                     </li>
                     <li class="">
-                        <a href="https://www.pejmannorouzi.com#customer"><i class="fa fa-magic"></i>مشتریان</a>
+                        <a href="https://www.pejmannorouzi.com#customer">
+                            <i class="fa fa-magic"></i>مشتریان</a>
                     </li>
                     <li class="">
-                        <a href="https://www.pejmannorouzi.com#contact"><i class="fa fa-paper-plane-o"></i>تماس با
-                            من</a>
+                        <a href="https://www.pejmannorouzi.com#contact">
+                            <i class="fa fa-paper-plane-o"></i>تماس با من</a>
                     </li>
                 </ul>
             </div>
