--- a/template/layout-front.phtml
+++ b/template/layout-front.phtml
@@ -310,7 +310,7 @@ $blockTemplate = $this->template('block');
                     ایده های طراحی شده را به اجرا در میاورم . در بسیاری از موارد به جای ایده پردازی و یا اجرای ایده ها ،
                     مشاور شما میشوم تا بتوانید بهترین تصمیم ها را اتخاذ کنید. اگر مدیر یک موزه یا مرکز علم هستید ، یا یک
                     کلکسیون شخصی دارید و یا به دنیال برگزاری یک رویداد (مثلا افتتاحیه ، اختتامیه ، جشن فارغ التحصیلی یا
-                    حتی برنامه های علمی فرهنگی) هستید ، کمکهای من و دوستانم راهگشای خوبی برای شما خواهند بود.</p>
+                    حتی برنامه های علمی فرهنگی) هستید ، کمکهای من و دوستانم راهگشای خوبی برای شما خواهند بود. برای این کار از بخش "ارتباط با من" استفاده کنید.</p>
             </div>
             <div class="brow sev_list">
                 <div class="brick2">
